# devops

./: .gitignore  14.md  CI.md  Jenkinsfile  README.md  TF.md
.github/: flake8_matcher.json
.github/workflows/: ci.yaml  release.yaml
ansible/: ansible.cfg  requirements.yaml
ansible/inventory/: hosts.yaml  hosts_aws_ec2.yaml
ansible/playbooks/: playbook.yaml
ansible/roles/application_compose/defaults/: main.yaml
ansible/roles/application_compose/meta/: main.yaml
ansible/roles/application_compose/tasks/: main.yaml
ansible/roles/application_compose/templates/: docker-compose.yaml.j2
ansible/roles/docker_compose_ubuntu/defaults/: main.yaml
ansible/roles/docker_compose_ubuntu/meta/: main.yaml
ansible/roles/docker_compose_ubuntu/tasks/: main.yaml
ansible/roles/docker_ubuntu/: tasks.yaml
ansible/roles/docker_ubuntu/defaults/: main.yaml
app_python/: .dockerignore  DOCKER.md  Dockerfile  PYTHON.md  README.md  docker-compose.yaml  main.py  pyproject.toml  test_endpoints.py  test_time.py
k8s/: 11.md  12.md  13.md  README.md  deployment.yaml  service.yaml
k8s/falcon/: Chart.yaml  secrets.yaml  values.yaml
k8s/falcon/templates/: NOTES.txt  _helpers.tpl  configmaps.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
monitoring/: LOGGING.md  docker-compose.yaml
monitoring/prometheus/: config.yml
monitoring/promtail/: config.yml
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/instances/: main.tf  outputs.tf  variables.tf
(+5 files in other folders)
