[tool.poetry]
name = "app_python"
version = "0.1.0"
description = "python app that displays time"
authors = ["Vladislav Kalmykov <vladkalm49@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
falcon = "^3.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
uWSGI = "^2.0.19"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
